--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/open-sans": "^5.0.28",
-    "@mui/icons-material": "^5.15.20",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.11",
     "howler": "^2.2.4",
     "interweave": "^13.1.0",
@@ -26,7 +27,8 @@
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.23.1",
-    "react-weblineindia-time-picker": "^1.0.3"
+    "react-weblineindia-time-picker": "^1.0.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
