--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -6,7 +6,7 @@
     "LocalNotifications": {
       "smallIcon": "ic_stat_icon_config_sample",
       "iconColor": "#488AFF",
-      "sound": "alarm.mp3"
+      "sound": "alarm.wav"
     }
   }
 }
