--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^6.1.2",
+    "@capacitor/app": "^6.0.1",
     "@capacitor/core": "^6.1.2",
     "@capacitor/local-notifications": "^6.1.0",
     "@chakra-ui/react": "^2.8.2",
@@ -25,6 +26,7 @@
     "howler": "^2.2.4",
     "interweave": "^13.1.0",
     "moment": "^2.30.1",
+    "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
