refactor router & layout, add android assets

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -4,8 +4,8 @@
   "webDir": "dist",
   "plugins": {
     "LocalNotifications": {
-      "smallIcon": "ic_stat_icon_config_sample",
-      "iconColor": "#488AFF",
+      "smallIcon": "ic_launcher",
+      "iconColor": "#000000",
       "sound": "alarm.wav"
     }
   }
